# GapScope-Engineering-Knowledge-Gap-Analyzer

./: .env.example  .gitignore  DEPLOY.md  README.md  VISION.md  pyproject.toml  render.yaml
.github/workflows/: sweep.yml
config/: baseline_seed.yaml  docs_registry.yaml  llm.yaml  targets.yaml  tool_denylist.yaml  tool_groups.yaml
docs/superpowers/plans/: 2026-06-13-gapscope-deterministic-engine.md  2026-06-13-gapscope-plan2-enrichment.md  2026-06-13-goal-directed-analysis-plan.md  2026-06-13-interactive-app-plan-a-engine-api.md  (+1 more)
src/gapscope/: __init__.py  baseline.py  cache.py  cli.py  config.py  denoise.py  gaps.py  github_client.py  harvester.py  links.py  llm.py  manifests.py  methodology.py  models.py  recommender.py  report.py  resolver.py
tests/: test_baseline.py  test_cache.py  test_cli_enrich.py  test_cli_integration.py  test_denoise.py  test_gaps.py  test_github_client.py  test_harvester.py  test_links.py  test_llm.py  test_manifests.py  test_methodology.py  test_recommender.py  test_report.py  test_resolver.py
web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/app/: AnalyzerApp.tsx  ClientPage.tsx  globals.css  layout.tsx  page.tsx
web/components/: BaselinePanel.tsx  ComparisonsSection.tsx  Controls.tsx  Dashboard.tsx  DomainMap.tsx  GapList.tsx  GapRow.tsx  LearningPath.tsx  PositioningPanel.tsx  ProgressFeed.tsx  ProjectGaps.tsx  ResumeUpload.tsx  SkillChips.tsx  TargetPicker.tsx
web/lib/: client.test.ts  client.ts  result-types.ts  types.ts
web/lib/engine/: gaps.ts  (+23 more)
web/public/: data.json
(+14 files in other folders)
