[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gapscope"
version = "0.1.0"
description = "Engineering knowledge-gap analyzer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gapscope = "gapscope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gapscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
